fixing volume text spacing

--- a/Assets/Styles/Sass/main.sass
+++ b/Assets/Styles/Sass/main.sass
@@ -41,6 +41,7 @@ body
     min-width: 100px
     color: $FontColor
     box-shadow: 3px 3px 6px rgb(0,0,0,0.3)
+    cursor: pointer
 
 .btn--control_btn
     width: 75%
@@ -70,6 +71,8 @@ body
     top: 15px
     right: 15px
     font-size: 32px
+    cursor: pointer
+
 .container--logout_button
     padding: 2px
     position: fixed
@@ -104,7 +107,6 @@ body
     width: 100%
     max-width: 768px
     margin: auto
-
 
 .modal
     display: none
@@ -165,6 +167,9 @@ body
 .modal--media_controls .media-control_button
     font-size: 35px
     padding: 0 15px
+
+.modal--media_controls #media-volume_level
+    padding: 10px 0 15px 0
 
 .modal--level_text
     padding: 10px 0 15px 0
